--- a/client/Makefile
+++ b/client/Makefile
@@ -1,4 +1,4 @@
 default:
-	g++ main.cc screen.cc world.cc -o woof -g -std=c++0x -lSDL2 -lGLEW -lGL -Wall -Wextra -Wshadow -Wno-unused-parameter -Wno-unused-variable
+	g++ main.cc screen.cc world.cc net.cc -o woof -g -std=c++0x -lSDL2 -lGLEW -lGL -lenet -Wall -Wextra -Wshadow -Wno-unused-parameter -Wno-unused-variable -fpermissive
 	./woof
 
