Add warnings to Makefile

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,4 +1,9 @@
+warnings = -Wall -Wextra -Wshadow -Wno-unused-parameter -Wno-unused-variable \
+		   -Wduplicated-cond -Wdouble-promotion -Wnull-dereference \
+		   -Wsuggest-attribute=const
+flags = -g -std=c++0x
+
 default:
-	g++ main.cc screen.cc net.cc -o woof -g -std=c++0x -lSDL2 -lGLEW -lGL -lenet -Wall -Wextra -Wshadow -Wno-unused-parameter -Wno-unused-variable
+	g++ main.cc screen.cc net.cc -o woof $(flags) -lSDL2 -lGLEW -lGL $(warnings)
 	./woof
 
