--- a/client/Makefile
+++ b/client/Makefile
@@ -8,6 +8,11 @@ default:
 	g++ main.cc screen.cc net.cc bits.cc -o woof $(flags) $(libraries) $(warnings)
 	./woof
 
+server:
+	g++ -DWOOF_SERVER main.cc screen.cc net.cc bits.cc -o woof_server $(flags) \
+		$(libraries) $(warnings)
+	./woof_server
+
 lines:
 	@wc -l *.* Makefile ../woof_serv/src/*.{erl,src}
 
