Fix bits.cc and net implementation

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,7 +1,7 @@
 warnings = -Wall -Wextra -Wshadow -Wno-unused-parameter -Wno-unused-variable \
 		   -Wduplicated-cond -Wdouble-promotion -Wnull-dereference \
 		   -Wsuggest-attribute=const
-flags = -g -std=c++0x
+flags = -g -std=c++0x -fno-rtti
 libraries = -lSDL2 -lGLEW -lGL -lpthread
 
 default:
