Add sasl & make players move from movement packets

--- a/woof_serv/rebar.config
+++ b/woof_serv/rebar.config
@@ -1,7 +1,7 @@
 { erl_opts, [debug_info] }.
 { deps, [] }.
 
-{ relx, [{ release, { woof_serv, "0.1.0" }, [woof_serv] },
+{ relx, [{ release, { woof_serv, "0.1.0" }, [woof_serv, sasl] },
          { dev_mode, true },
          { include_erts, false },
          { extended_start_script, true },
