Rm node "c" and rebar

--- a/woof_serv/config/b.config
+++ b/woof_serv/config/b.config
@@ -1,6 +1,6 @@
 [{ kernel,
-   [{ distributed, [{ woof_serv_app, 5000, [a@zeus, { b@zeus, c@zeus }] }] },
-    { sync_nodes_mandatory, [a@zeus, c@zeus] },
+   [{ distributed, [{ woof_serv_app, 5000, [a@zeus, b@zeus] }] },
+    { sync_nodes_mandatory, [a@zeus] },
     { sync_nodes_timeout, 30000 }
    ]
  }
